nginx-controller/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
      certmanager.k8s.io/cluster-issuer: letsencrypt-prod
      kubernetes.io/tls-acme: 'true'
    name: multi-route-ssl
    namespace: monitoring
spec:
  rules:
  - host: api.cyberbot.io
    http:
      paths:
      - backend:
          serviceName: cyberbot-api
          servicePort: 7080
  - host: console.cyberbot.io
    http:
      paths:
      - backend:
          serviceName: cyberbot-console
          servicePort: 7082
  - host: portal.cyberbot.io
    http:
      paths:
      - backend:
          serviceName: cyberbot-portal
          servicePort: 7086
  - host: proxy.innovi.io
    http:
      paths:
      - backend:
          serviceName: cyberbot-proxy 
          servicePort: 7070
  - host: dashboard.cyberbot.io
    http:
      paths:
      - backend:
          serviceName: linkerd-web
          servicePort: 7084
  - host: monitor.cyberbot.io
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
  tls:
  - secretName: letsencrypt-prod
    hosts:
     - api.cyberbot.io
     - console.cyberbot.io
     - portal.cyberbot.io
     - proxy.cyberbot.io
     - dashboard.cyberbot.io
     - monitor.cyberbot.io
