nginx-controller/nginx-multi-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    annotations:
      kubernetes.io/ingress.class: nginx
      certmanager.k8s.io/cluster-issuer: letsencrypt-prod
      kubernetes.io/tls-acme: 'true'
    name: multi-route-monitor
    namespace: monitoring
spec:
  rules:
  - host: alertmanager-staging.innovi.io
    http:
      paths:
      - backend:
          serviceName: alertmanager
          servicePort: 9093
  - host: monitor-staging.innovi.io
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 3000
  - host: prometheus-staging.innovi.io
    http:
      paths:
      - backend:
          serviceName: prometheus
          servicePort: 9090
  tls:
  - secretName: letsencrypt-prod
    hosts:
     - alertmanager-staging.innovi.io
     - monitor-staging.innovi.io
     - prometheus-staging.innovi.io
